// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductItem rendering Should render correctly 1`] = `
<ProductItemWrapper
  product={
    Object {
      "description": "La Tissot Gentleman est une montre polyvalente, à la fois ergonomique et élégante en toutes circonstances. Elle se porte aussi bien en environnement professionnel, qui privilégie des codes classiques, que le week-end, où elle se plie avec aisance aux activités de loisirs. A sa place dans la vie d'un homme moderne et actif, la Tissot Gentleman se fait le compagnon idéal de tous les jours, de toutes les occasions, de tous les styles.",
      "id": "9myf5qjyvr",
      "name": "TISSOT CHEMIN DES TOURELLES POWERMATIC 80",
      "pictures": Array [
        "https://www.tissotwatches.com/media/shop/catalog/product/cache/all/image/920x/17f82f742ffe127f42dca9de82fb58b1/T/0/T099.429.11.038.00_1.png",
      ],
      "price": 960,
    }
  }
>
  <Link
    className="makeStyles-link-1"
    to="/9myf5qjyvr"
  >
    <WithStyles(ForwardRef(Button))
      color="primary"
      fullWidth={true}
      size="large"
      variant="contained"
    >
      Voir
    </WithStyles(ForwardRef(Button))>
  </Link>
</ProductItemWrapper>
`;

exports[`ProductItemSheet rendering Should render correctly 1`] = `
<ProductItemWrapper
  product={
    Object {
      "description": "La Tissot Gentleman est une montre polyvalente, à la fois ergonomique et élégante en toutes circonstances. Elle se porte aussi bien en environnement professionnel, qui privilégie des codes classiques, que le week-end, où elle se plie avec aisance aux activités de loisirs. A sa place dans la vie d'un homme moderne et actif, la Tissot Gentleman se fait le compagnon idéal de tous les jours, de toutes les occasions, de tous les styles.",
      "id": "9myf5qjyvr",
      "name": "TISSOT CHEMIN DES TOURELLES POWERMATIC 80",
      "pictures": Array [
        "https://www.tissotwatches.com/media/shop/catalog/product/cache/all/image/920x/17f82f742ffe127f42dca9de82fb58b1/T/0/T099.429.11.038.00_1.png",
      ],
      "price": 960,
    }
  }
>
  <WithStyles(ForwardRef(Button))
    color="primary"
    fullWidth={true}
    size="large"
    variant="contained"
  >
    Ajouter au panier
  </WithStyles(ForwardRef(Button))>
</ProductItemWrapper>
`;
